--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Departamentos disponibles en Villalesandra</title>
+<title>Departamentos disponibles en Vill Alessandra</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -1703,7 +1703,7 @@ border-radius: 0px;
 
 <h1 class="title toc-ignore">Departamentos disponibles en
 Villalesandra</h1>
-<h4 class="author">Javier Alejandro Moreno Mendoza</h4>
+<h4 class="author">Javier Alejandro Mendoza</h4>
 
 </div>
 
@@ -1786,7 +1786,7 @@ h3 { color: #A0522D; }
 <div id="bienvenido" class="section level1">
 <h1>Bienvenido</h1>
 <p>A continuación, se presenta la disponibilidad de los lofts para el
-complejo Villalesandra, ubicado en el prestigioso fraccionamiento
+complejo Vill Alessandra, ubicado en el prestigioso fraccionamiento
 residencial Val´quirico</p>
 <p>Descubre nuestra exclusiva colección de <strong>lofts
 modernos</strong> diseñados para el estilo de vida contemporáneo. Cada
